--- a/tugas4-Cassandra-Single-Node/Vagrantfile
+++ b/tugas4-Cassandra-Single-Node/Vagrantfile
@@ -6,17 +6,16 @@
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
 Vagrant.configure("2") do |config|
-  (1..2).each do |i|
-	config.vm.define "node#{i}" do |node|
+	config.vm.define "node1" do |node|
 		# Box Settings
 		node.vm.box = "bento/ubuntu-16.04"
-		node.vm.hostname = "node#{i}"
+		node.vm.hostname = "node1"
 
 		# Provider Settings
 		node.vm.provider "virtualbox" do |vb|
 		# Display the VirtualBox GUI when booting the machine
 		vb.gui = false
-		vb.name = "node#{i}"
+		vb.name = "node1"
 		# Customize the amount of memory on the VM:
 		vb.memory = "512"
 		end
@@ -24,7 +23,7 @@ Vagrant.configure("2") do |config|
 		# Network Settings
 		# slave.vm.network "forwarded_port", guest: 80, host: 8080
 		# slave.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
-		node.vm.network "private_network", ip: "192.168.33.1#{i}"
+		node.vm.network "private_network", ip: "192.168.33.11"
 		# slave.vm.network "public_network"
 
 		# Folder Settings
@@ -35,6 +34,5 @@ Vagrant.configure("2") do |config|
 		#   apt-get update
 		#   apt-get install -y apache2
 		# SHELL
-		end
 	end
 end
